--- a/LearningSpace/LearningSpace.csproj
+++ b/LearningSpace/LearningSpace.csproj
@@ -64,6 +64,12 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="NewNodes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewNodes.Designer.cs">
+      <DependentUpon>NewNodes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Nodes.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,6 +86,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MenuForm.resx">
       <DependentUpon>MenuForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NewNodes.resx">
+      <DependentUpon>NewNodes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Nodes.resx">
       <DependentUpon>Nodes.cs</DependentUpon>
