Доделать окна регистрации и аторизации

--- a/LearningSpace/LearningSpace.csproj
+++ b/LearningSpace/LearningSpace.csproj
@@ -200,5 +200,6 @@
   <ItemGroup>
     <None Include="Resources\icons8-unlock-48.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
