--- a/LearningSpace/LearningSpace.csproj
+++ b/LearningSpace/LearningSpace.csproj
@@ -51,6 +51,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\DataBase.cs" />
+    <Compile Include="EventForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EventForm.Designer.cs">
+      <DependentUpon>EventForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Graph.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -96,10 +102,10 @@
     <Compile Include="TestMenuForm.Designer.cs">
       <DependentUpon>TestMenuForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="UserControlBlank.cs">
+    <Compile Include="Control\UserControlBlank.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UserControlBlank.Designer.cs">
+    <Compile Include="Control\UserControlBlank.Designer.cs">
       <DependentUpon>UserControlBlank.cs</DependentUpon>
     </Compile>
     <Compile Include="UserControlDays.cs">
@@ -108,6 +114,9 @@
     <Compile Include="UserControlDays.Designer.cs">
       <DependentUpon>UserControlDays.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="EventForm.resx">
+      <DependentUpon>EventForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Graph.resx">
       <DependentUpon>Graph.cs</DependentUpon>
     </EmbeddedResource>
@@ -139,7 +148,7 @@
     <EmbeddedResource Include="TestMenuForm.resx">
       <DependentUpon>TestMenuForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UserControlBlank.resx">
+    <EmbeddedResource Include="Control\UserControlBlank.resx">
       <DependentUpon>UserControlBlank.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserControlDays.resx">
